--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.15.0",
     "react-simple-captcha": "^9.0.17",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.27",
     "swiper": "^10.2.0"
   },
   "devDependencies": {
