--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "axios": "^1.5.0",
     "firebase": "^10.3.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
